--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -614,44 +614,13 @@ video {
   }
 }
 
-.bg-blue-500 {
-  --bg-opacity: 1;
-  background-color: #4299e1;
-  background-color: rgba(66, 153, 225, var(--bg-opacity));
-}
-
-.hover\:bg-blue-700:hover {
-  --bg-opacity: 1;
-  background-color: #2b6cb0;
-  background-color: rgba(43, 108, 176, var(--bg-opacity));
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .table {
   display: table;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.text-white {
-  --text-opacity: 1;
-  color: #fff;
-  color: rgba(255, 255, 255, var(--text-opacity));
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @-webkit-keyframes spin {
